# menu

./: README.md  pyproject.toml
config/: settings.py  urls.py
food/: admin.py  models.py  serializers.py
food/migrations/: 0001_initial.py
food_category/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
food_category/migrations/: 0001_initial.py
